# NumericMethod3

./: CMakeLists.txt
src/: main.cpp
src/math/: empty.cpp  matrix.hpp  solver.hpp
src/utils/: generator.hpp  private_cracker.hpp
tests/: gauss_solver.cpp  make_matrix.cpp  rotation_solver.cpp
